--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Books</h1>
+<section class="w-full flex flex-col">
+  <h1 class="w-full">Books</h1>
 <% @books.each do |book| %>
   <div class="book">
-    <h3><%= link_to book.title, book %></h3>
-    <p>Author: <%= book.author %></p>
-    <p>ISBN: <%= book.isbn %></p>
-    <p>Status: <%= book.available? ? 'Available' : 'Borrowed' %></p>
+    <h3 class="text-lg font-bold"><%= link_to book.title, book %></h3>
+    <p class="">Author: <%= book.author %></p>
+    <p class="">ISBN: <%= book.isbn %></p>
+    <p class="">Status: <%= book.available? ? 'Available' : 'Borrowed' %></p>
   </div>
 <% end %>
+</section>
