--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,13 @@
 <section class="w-full flex flex-col">
-  <h1 class="w-full">Books</h1>
-<% @books.each do |book| %>
-  <div class="book">
+  <h1 class="w-full font-semibold text-xl text-center">Available Books</h1>
+  <div class="grid grid-cols-4 gap-4">
+    <% @books.each do |book| %>
+  <div class="book-card p-4 border border-gray-200 rounded">
     <h3 class="text-lg font-bold"><%= link_to book.title, book %></h3>
     <p class="">Author: <%= book.author %></p>
     <p class="">ISBN: <%= book.isbn %></p>
     <p class="">Status: <%= book.available? ? 'Available' : 'Borrowed' %></p>
   </div>
 <% end %>
+  </div>
 </section>
