--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="flex flex-col min-h-screen bg-gray-100">
+  <body class="flex flex-col min-h-screen w-full bg-gray-100">
   <!-- Navbar -->
   <nav class="bg-gray-800 text-white shadow-lg">
     <div class="container mx-auto px-4">
@@ -61,7 +61,7 @@
   <footer class="bg-gray-800 text-white mt-12">
     <div class="container mx-auto px-4 py-4">
       <div class="text-center">
-        <p>&copy; <%= Time.current.year %> Library App. All rights reserved.</p>
+        <p>&copy; <%= Time.current.year %> Library App. All rights reserved. By Garoli</p>
       </div>
     </div>
   </footer>
