--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <section class="w-full flex flex-col">
-  <h1 class="w-full font-semibold text-xl text-center">Available Books</h1>
+  <h1 class="w-full font-semibold text-xl text-center mb-6">Available Books</h1>
   <div class="grid grid-cols-4 gap-4">
     <% @books.each do |book| %>
   <div class="book-card p-4 border border-gray-200 rounded">
