--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,10 @@
 <div class="max-w-4xl mx-auto">
+  <div class="w-full flex justify-between items-center mb-6">
+    <h2 class="text-xl font-semibold">Welcome, <%= current_user.name %></h2>
+  <p class="text-gray-600"><%= current_user.email %></p>
+  </div>
   <h1 class="text-2xl font-bold mb-6">Your Borrowed Books</h1>
+  
 
   <% if current_user.borrowings.current.any? %>
     <div class="space-y-4">
